--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
@@ -18,6 +19,7 @@
     "axios": "^1.13.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.5.2",
