--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-bootsplash": "^6.3.11",
     "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-paper": "^5.14.5",
